@@ -152,6 +152,10 @@ This will result in the directory `/etc/pki/simp_apps/httpd/x509` being created 
 the `cacerts`, `public`, and `private` subdirectories as specified in the
 `/some/other/certs` directory.
 
+## Reference
+
+Please refer to the [REFERENCE.md](REFERENCE.md), generated by Puppet strings.
+
 ## Development
 
 Please read our
