@@ -12,8 +12,8 @@
 #   * NOTE: It is **highly recommended** that you purge unmanaged keys for
 #     security reasons
 class pki::copy::apps_dir (
-  Stdlib::Absolutepath $target              = '/etc/pki/simp_apps',
-  Boolean              $purge               = true
+  Stdlib::Absolutepath $target = '/etc/pki/simp_apps',
+  Boolean              $purge  = true
 ){
   assert_private()
 
